2009-09-25  Eric Blake  <ebb9@byu.net>

	* syscalls.cc (fchmodat): lchmod is not yet implemented.
	(euidaccess): New function.
	* path.cc (realpath): Update comment.
	(canonicalize_file_name): New function.
	* include/cygwin/stdlib.h (canonicalize_file_name): Declare it.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.
	* cygwin.din: Export canonicalize_file_name, eaccess, euidaccess.
	* posix.sgml: Mention them.

2009-09-25  Eric Blake  <ebb9@byu.net>

	* fhandler.h (fhandler_base::fhaccess): Add parameter.
	* security.h (check_file_access, check_registry_access): Likewise.
	* security.cc (check_file_access, check_registry_access)
	(check_access): Implement new parameter.
	* fhandler.cc (fhandler_base::fhaccess): Likewise.
	(device_access_denied): Update caller.
	* syscalls.cc (access, faccessat): Update callers.
	* spawn.cc (find_exec, fixup): Likewise.

2009-09-24  Corinna Vinschen  <corinna@vinschen.de>

	* posix_ipc.cc (mq_open): Avoid closing the same descriptor twice in
	case of errors.
	(sem_open): Ditto.

2009-09-24  Corinna Vinschen  <corinna@vinschen.de>

	* kernel32.cc (CreateMutexW): Use correct access mask.
	(CreateSemaphoreW): Ditto.

2009-09-23  Corinna Vinschen  <corinna@vinschen.de>

	* strfuncs.cc (__set_charset_from_codepage): Fetch current ANSI
	codepage if cp is 0.

2009-09-23  Corinna Vinschen  <corinna@vinschen.de>

	* strfuncs.cc (sys_cp_wcstombs): Convert lone surrogate pair
	second halves to unambiguous ASCII SO sequence.  When converting
	chars invalid in current codepage to ASCII SO sequence, make
	sure to check for surrogate pair second half only if at least
	one wide characters is left.  Decrement nwc if valid second half has
	been converted.
	(sys_cp_mbstowcs): Improve ASCII SO handling.  Never break from loop
	if invalid character has been found.  Recognize ASCII SO sequence
	representing originally invalid mulitbyte char converted into a
	lone surrogate pair second half.  Convert accordingly.
